samples/_failures_safe/1761556569_b8d4bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17003658.c: In function ‘main’:
./samples/SAFE/__tmp_17003658.c:155:5: error: expected declaration or statement at end of input
  155 |     return 0;
      |     ^~~~~~
